overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,14 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden !important;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     background: var(--color-bg);
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     background-image: url('./assets/bg-texture-2.png');
     background-repeat: no-repeat;
     background-size: cover;
